syntax = "proto3";

import "google/protobuf/wrappers.proto";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message EmojifyItem {
  string id = 1;
}

message QueryStatus{
  enum QueryStatus {
    UNKNOWN = 0;
    QUEUED = 1;
    FINISHED = 2;
  }

  QueryStatus status = 1;
}

message QueryItem {
  string id = 1;
  QueryStatus status = 2;
  int32 queuePosition = 3;
}

service Emojify {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Create(google.protobuf.StringValue) returns (EmojifyItem) {}
  rpc Query(EmojifyItem) returns (QueryItem) {}
}

